// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AboutModalBoxCloseButton Test 1`] = `
<div
  className="pf-c-about-modal-box__close"
>
  <Button
    aria-label="Close Dialog"
    className=""
    component="button"
    isActive={false}
    isBlock={false}
    isDisabled={false}
    isFocus={false}
    isHover={false}
    isInline={false}
    onClick={[Function]}
    type="button"
    variant="plain"
  >
    <TimesIcon
      color="currentColor"
      size="sm"
      title={null}
    />
  </Button>
</div>
`;

exports[`AboutModalBoxCloseButton Test onclose 1`] = `
<div
  className="pf-c-about-modal-box__close"
  onclose={[MockFunction]}
>
  <Button
    aria-label="Close Dialog"
    className=""
    component="button"
    isActive={false}
    isBlock={false}
    isDisabled={false}
    isFocus={false}
    isHover={false}
    isInline={false}
    onClick={[Function]}
    type="button"
    variant="plain"
  >
    <TimesIcon
      color="currentColor"
      size="sm"
      title={null}
    />
  </Button>
</div>
`;
